<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <ImageView
        android:id="@+id/close"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:src="@drawable/ic_baseline_close_24" />


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@+id/close"
        android:layout_marginLeft="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txt_gm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_logo"
        android:layout_marginLeft="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/gm_frens"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_gm"
        android:layout_marginLeft="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="One Place for all your\nCryptos"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/_20sdp" />

    <LinearLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_below="@+id/greeting"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/roundcorener_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/create_wallet"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_52sdp"
            android:drawableLeft="@drawable/ic_baseline_add_circle_outline_24"
            android:drawableRight="@drawable/ic_baseline_chevron_right_24"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_12sdp"
            android:text="@string/create_wallet"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/linecolor"/>


        <TextView
            android:id="@+id/importwallet"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_52sdp"
            android:drawableLeft="@drawable/ic_baseline_downloading_24"
            android:drawableRight="@drawable/ic_baseline_chevron_right_24"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_12sdp"
            android:text="@string/import_wallet"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout_cnw"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@+id/layout_btn"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/roundcorener_bg"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_52sdp"
            android:drawableLeft="@drawable/ic_baseline_insert_link_24"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_12sdp"
            android:text="@string/connect_wallet"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_60sdp">

            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:src="@drawable/logo"/>
            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:src="@drawable/logo"/>
            <ImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:src="@drawable/logo"/>
            <ImageView
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:src="@drawable/ic_baseline_chevron_right_24"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_cnw"
        android:layout_marginHorizontal="@dimen/_14sdp"
        android:text="@string/support_for_everdoge_wallet_ledger_trezor_and_other_wallets"
        android:textColor="@color/light_gray"
        android:layout_marginTop="@dimen/_8sdp"
        android:textSize="@dimen/_12sdp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/_36sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="8dp"
        android:text="@string/by_continuing_to_the_app_you_agree_to_these_user_services_agreement_and_privacy_policy"
        android:textAlignment="center"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/_12sdp" />

</RelativeLayout>