<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateWalletActivity"
    android:background="@color/bg">


    <ImageView
        android:id="@+id/backbtn"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/setpassMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        android:layout_below="@+id/backbtn"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:text="@string/set_password"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/setpassMsg"
        android:inputType="textPassword"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/roundcorener_bg"
        android:hint="@string/enter_min_8_digit_password"
        android:paddingHorizontal="@dimen/_12sdp"
        android:textColorHint="@color/light_gray" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/password"
        android:inputType="textPassword"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/roundcorener_bg"
        android:hint="Confirm Password"
        android:paddingHorizontal="@dimen/_12sdp"
        android:textColorHint="@color/light_gray" />

    <CheckBox
        android:id="@+id/chbx"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_below="@+id/confirm_password"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:textColor="@color/light_gray" />
    <TextView
        android:layout_toRightOf="@id/chbx"
        android:layout_below="@+id/confirm_password"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:text="Authentication with touch Id"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/chbx"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/roundcorener_bg_btn"
        android:text="@string/continues"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />
</RelativeLayout>