<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateWalletActivity"
    android:background="@color/bg">


    <ImageView
        android:id="@+id/backbtn"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:src="@drawable/ic_baseline_arrow_back_24" />

    <TextView
        android:id="@+id/importmesg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/backbtn"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/import_wallet_str"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp"
        android:layout_below="@+id/importmesg"
        android:inputType="textPassword"
        android:gravity="start"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/roundcorener_bg"
        android:padding="@dimen/_8sdp"
        android:hint="@string/enter_recovery_phrase_private_key_naddress_ens_or_bit"
        android:paddingHorizontal="@dimen/_12sdp"
        android:textColorHint="@color/light_gray" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/password"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/roundcorener_bg_btn"
        android:text="@string/continues"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />
    <TextView
        android:id="@+id/textinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_continue"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:text="What is a recovery phrase?"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/textinfos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textinfo"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="It is a 12,18 or 24-word phrase that can be used to restore your wallet."
        android:textColor="@color/light_gray"
        android:textSize="@dimen/_10sdp" />


    <TextView
        android:id="@+id/textinfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textinfos"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:text="What is a recovery phrase?"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />
    <TextView
        android:id="@+id/textinfos3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textinfo2"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="It is a 12,18 or 24-word phrase that can be used to restore your wallet."
        android:textColor="@color/light_gray"
        android:textSize="@dimen/_10sdp" />


    <TextView
        android:id="@+id/findwaltesmsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/importwallet"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_36sdp"
        android:text="Where can i find my wallet"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/importwallet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_alignParentBottom="true"
        android:drawableLeft="@drawable/ic_baseline_downloading_24"
        android:drawableRight="@drawable/ic_baseline_chevron_right_24"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/_12sdp"
        android:text="Meta Mask"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp" />
</RelativeLayout>