<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".MoveFragments">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/roundcorener_bg">
        <ImageView
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_8sdp"
            android:src="@drawable/ic_baseline_search_24"/>

        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/_8sdp"
            android:src="@drawable/ic_baseline_document_scanner_24"/>


    </RelativeLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginHorizontal="@dimen/_12ssp"
           android:orientation="horizontal">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:background="@drawable/highlight"
               android:paddingVertical="@dimen/_4sdp"
               android:paddingHorizontal="@dimen/_12ssp"
               android:textColor="@color/white"
               android:text="@string/mine"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textColor="@color/light_gray"
               android:layout_marginLeft="@dimen/_8sdp"
               android:text="@string/neww"/>


       </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_12ssp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/highlight"
                android:paddingHorizontal="@dimen/_12ssp"
                android:paddingVertical="@dimen/_4sdp"
                android:text="@string/favorite"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_toRightOf="@+id/fav"
                android:text="@string/history"
                android:textColor="@color/light_gray"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/see_all"
               android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/ic_baseline_chevron_right_24"
                android:textColor="@color/light_gray"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/see_all"/>


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_12ssp"
            android:gravity="center"
            android:background="@drawable/roundcorener_bg"
            android:textColor="@color/light_gray"
            android:text="Your Favorite will appear here."
            android:layout_marginHorizontal="@dimen/_14ssp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_12ssp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/leaderboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/highlight"
                android:paddingHorizontal="@dimen/_12ssp"
                android:paddingVertical="@dimen/_4sdp"
                android:text="@string/leaderboard"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />
            <TextView
                android:id="@+id/see_all1"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/ic_baseline_chevron_right_24"
                android:textColor="@color/light_gray"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/see_all"/>


        </RelativeLayout>


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/itemview"/>
                <include layout="@layout/itemview"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/itemview"/>
                <include layout="@layout/itemview"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/itemview"/>
                <include layout="@layout/itemview"/>

            </LinearLayout>

        </LinearLayout></HorizontalScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_12ssp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/leaderboard1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/highlight"
                android:paddingHorizontal="@dimen/_12ssp"
                android:paddingVertical="@dimen/_4sdp"
                android:text="PLAY2EARN"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />
            <TextView
                android:id="@+id/see_all2"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/ic_baseline_chevron_right_24"
                android:textColor="@color/light_gray"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/see_all"/>


        </RelativeLayout>


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/itemview"/>
                    <include layout="@layout/itemview"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/itemview"/>
                    <include layout="@layout/itemview"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/itemview"/>
                    <include layout="@layout/itemview"/>

                </LinearLayout>

            </LinearLayout></HorizontalScrollView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_12ssp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/web3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/highlight"
                android:paddingHorizontal="@dimen/_12ssp"
                android:paddingVertical="@dimen/_4sdp"
                android:text="WEB3"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />
            <TextView
                android:id="@+id/see_all3"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/ic_baseline_chevron_right_24"
                android:textColor="@color/light_gray"
                android:layout_marginLeft="@dimen/_8sdp"
                android:text="@string/see_all"/>


        </RelativeLayout>


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/itemview"/>
                    <include layout="@layout/itemview"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/itemview"/>
                    <include layout="@layout/itemview"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/itemview"/>
                    <include layout="@layout/itemview"/>

                </LinearLayout>

            </LinearLayout></HorizontalScrollView>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>